# mathoptsolverscmake

./: CMakeLists.txt  README.md
.github/workflows/: clp-mac-build.yml  coin-mac-build.yml
include/mathoptsolverscmake/: box_constrained_nlp.hpp  common.hpp  mathopt.hpp  mathopt_cbc.hpp  mathopt_conicbundle.hpp  mathopt_dlib.hpp  mathopt_highs.hpp  mathopt_knitro.hpp  mathopt_xpress.hpp  milp.hpp
scripts/: _mac_build.sh  cbc_mac_build.sh  clp_mac_build.sh  coinutils_mac_build.sh  osi_mac_build.sh
src/: CMakeLists.txt  box_constrained_nlp.cpp  common.cpp  mathopt.cpp  mathopt_cbc.cpp  mathopt_conicbundle.cpp  mathopt_dlib.cpp  mathopt_highs.cpp  mathopt_knitro.cpp  mathopt_xpress.cpp  milp.cpp
